--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <button type="button" id="button1">Generate Message</button> <br> <br>
     <h1 id="message"></h1>
 
-    <p> Hover Over Me to Highlight </p>
-    <p> Me too! ^</p>
-    <p> Me three! ^ </p>
+    <p data-color="red" class="hover_reveal"> Hover Over Me to Highlight </p>
+    <p data-color="blue" class="hover_reveal "> Me too! ^</p>
+    <p data-color="yellow" class="hover_reveal "> Me three! ^ </p>
 
     <p>Click the button to display the date.</p>
 
-    <button onclick="displayDate()">The time is?</button>
-    <p id="demo"> </p>
+    <button onclick="displayDate() ">The time is?</button>
+    <p id="demo "> </p>
 
     <script src=" jquery.js ">
     </script>
